kubernetes/rabbitmq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mykitchen-rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mykitchen-rabbitmq
  template:
    metadata:
      labels:
        app: mykitchen-rabbitmq
    spec:
      containers:
        - name: mykitchen-rabbitmq
          image: rabbitmq:3-management
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 15672
              name: rabbitmq-management
            - containerPort: 5672
              name: rabbitmq-messaging
---
apiVersion: v1
kind: Service
metadata:
  name: mykitchen-rabbitmq-clusterip
spec:
  type: ClusterIP
  selector:
    app: mykitchen-rabbitmq
  ports:
  - name: rabbitmq-management
    protocol: TCP
    port: 15672
    targetPort: 15672
  - name: rabbitmq-messaging
    protocol: TCP
    port: 5672
    targetPort: 5672
---
# Exposed only for local testing
apiVersion: v1
kind: Service
metadata:
  name: mykitchen-rabbitmq-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: mykitchen-rabbitmq
  ports:
  - name: rabbitmq-management
    protocol: TCP
    port: 15672
    targetPort: 15672
  - name: rabbitmq-messaging
    protocol: TCP
    port: 5672
    targetPort: 5672
