kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mykitchen-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  - host: sirmov.com
    http:
      paths:
      - pathType: Prefix
        path: /api/v1/identity
        backend:
          service:
            name: mykitchen-microservices-identity-api-rest-clusterip
            port: 
              number: 5000
      - pathType: Prefix
        path: /api/v1/recipes
        backend:
          service:
            name: mykitchen-microservices-recipes-api-rest-clusterip
            port:
              number: 6000
